--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,5 @@
+@import (less) "../node_modules/normalize.css/normalize.css";
 @import "components/index";
 @import "pages/index";
 @import "shared";
+
