--- a/less/components/header.less
+++ b/less/components/header.less
@@ -1,5 +1,5 @@
 .header {
-  height: ~"calc(100vh - 65px)";
+  height: ~"calc(100vh - 65px - 98px)";
   .header-content {
     height: 100%;
     text-align: center;
