CSS on the form/

--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -5,6 +5,7 @@
     height: 65px;
     width: 100%;
     display: flex;
+    z-index: 1;
     position: fixed;
     align-items: center;
     border-bottom: 1px solid #CFCFCF;
