--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -1,9 +1,20 @@
 .signup-form-container {
-  width: 30%;
-  display: inline-block;
+  width: 445px;
   vertical-align: top;
   .signup-form {
     margin: 64px 0 144px 0;
     padding: 0 84px 0 84px;
+  }
+  input {
+    width: 100%;
+    display: block;
+    height: 52px;
+    border: 1px solid #CFCFCF;
+    padding: 14px;
+    margin-bottom: -1px;
+    &:focus {
+      border-color: #17FFFF;
+      position: relative;
+    }
   }
 }
