--- a/less/shared.less
+++ b/less/shared.less
@@ -8,6 +8,10 @@ html {
   background: #FFFFFF;
 }
 
+a {
+  color: inherit;
+}
+
 .button {
   height: 42px;
   padding: 0.7rem 2.5rem 0.7rem 1rem;
@@ -18,6 +22,8 @@ html {
   position: relative;
   text-decoration: none;
   color: inherit;
+  border: none;
+  font-family: inherit;
 
   &::after {
     content: '';
