--- a/less/components/form-body.less
+++ b/less/components/form-body.less
@@ -1,7 +1,7 @@
 .form-body-container {
-  width: 70%;
-  display: inline-block;
+  width: ~"calc(100% - 445px)";
   vertical-align: top;
+  border-right: 1px solid #CFCFCF;
   .form-body {
     margin: 64px 0 144px 0;
     padding: 0 174px 0 174px;
