--- a/less/components/form-body.less
+++ b/less/components/form-body.less
@@ -5,5 +5,24 @@
   .form-body {
     margin: 64px 0 144px 0;
     padding: 0 174px 0 174px;
+    .horizontal-rule {
+      margin-top: 50px;
+      width: 68px;
+      height: 1px;
+      background: #17FFFF;
+    }
+    .form-description {
+      font-size: 20px;
+      line-height: 34px;
+      margin-bottom: 50px;
+      &::first-letter {
+        color: #17FFFF;
+        font-weight: 600;
+        float: left;
+        font-size: 108px;
+        margin-top: 8px;
+        margin-right: 12px;
+      }
+    }
   }
 }
