Finishing nav interation.

--- a/less/shared.less
+++ b/less/shared.less
@@ -1,5 +1,6 @@
 html {
   font-family: Arvo;
+  scroll-behavior: smooth;
 }
 
 * { Box-sizing: Border-box }
@@ -10,6 +11,11 @@ html {
 
 a {
   color: inherit;
+}
+
+.nav-offset {
+  height: 65px;
+  margin-top: -65px;
 }
 
 .button {
