Stub out resources page.

--- a/less/shared.less
+++ b/less/shared.less
@@ -3,7 +3,7 @@ html {
   scroll-behavior: smooth;
 }
 
-* { Box-sizing: Border-box }
+* { box-sizing: border-box }
 
 .page {
   background: #FFFFFF;
