--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -11,9 +11,17 @@
     border: 1px solid #CFCFCF;
     padding: 14px;
     margin-bottom: -1px;
+    &.invalid {
+      border-color: #FF0000;
+      position: relative;
+    }
     &:focus {
       border-color: #17FFFF;
       position: relative;
+      z-index: 1;
+    }
+    &:invalid {
+      box-shadow: none;
     }
   }
   @media screen and (min-width: 992px) {
