Starting submittion process to basket.

--- a/less/shared.less
+++ b/less/shared.less
@@ -21,6 +21,10 @@ a {
   right: 0;
 }
 
+.error-message {
+  color: #FF0000;
+}
+
 .button {
   height: 42px;
   padding: 0.7rem 2.5rem 0.7rem 1rem;
