--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -23,6 +23,24 @@
         opacity: 1;
       }
     }
+    .nav-lang-selector {
+      position: absolute;
+      right: 0;
+      top: 0;
+      margin-left: auto;
+      select {
+        border: none;
+        box-shadow: none;
+        background-color: transparent;
+        height: 65px;
+        font-size: 16px;
+        font-family: Arvo;
+        font-weight: 600;
+        &:invalid {
+          color: #767676;
+        }
+      }
+    }
     .nav-logo {
       height: 33px;
       width: 115px;
@@ -39,6 +57,8 @@
       height: 65px;
       display: flex;
       align-items: center;
+      justify-content: flex-start;
+      flex-direction: row;
       .nav-link {
         display: inline;
       }
@@ -46,6 +66,10 @@
         border-right: 1px solid #CFCFCF;
         padding: 16px;
         margin-right: 12px;
+      }
+      .nav-lang-selector {
+        display: inline-block;
+        margin-left: auto;
       }
     }
   }
