Prevent new lines in footer links

--- a/less/components/footer.less
+++ b/less/components/footer.less
@@ -104,7 +104,7 @@ footer {
       .footer-links {
         text-align: center;
         a {
-          display: inline;
+          display: inline-block;
         }
       }
     }
