--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -35,6 +35,7 @@
         font-size: 14px;
         font-family: Arvo;
         font-weight: 600;
+        cursor: pointer;
       }
     }
     .nav-logo {
@@ -53,8 +54,6 @@
       height: 65px;
       display: flex;
       align-items: center;
-      justify-content: flex-start;
-      flex-direction: row;
       .nav-link {
         display: inline;
       }
