Fonts for resources

--- a/less/pages/resources.less
+++ b/less/pages/resources.less
@@ -20,11 +20,16 @@
   }
   h4 {
     margin-bottom: 4px;
+    font-size: 1rem;
+  }
+  p {
+    font-size: 0.8rem;
+    line-height: 1rem;
   }
   .link-like,
   a {
     box-decoration-break: clone;
-    padding: 0 2px;
+    padding: 2px;
     text-decoration: none;
   }
   .link-like {
@@ -56,7 +61,13 @@
     margin: 0 -15px;
     .resource-container {
       .resource-content-container {
-
+        p,
+        h4 {
+          margin: 1.1rem 0;
+        }
+        h4 {
+          line-height: 1.5rem;
+        }
       }
       overflow: hidden;
       padding: 15px 25px;
