--- a/less/pages/resources.less
+++ b/less/pages/resources.less
@@ -60,6 +60,8 @@
     }
     margin: 0 -15px;
     .resource-container {
+      display: inline-flex;
+      align-items: center;
       .resource-content-container {
         p,
         h4 {
@@ -71,7 +73,6 @@
       }
       overflow: hidden;
       padding: 15px 25px;
-      display: inline-block;
       max-width: 400px;
       width: 100%;
       min-height: 400px;
