Some mobile resources fixes.

--- a/less/pages/resources.less
+++ b/less/pages/resources.less
@@ -1,10 +1,50 @@
 .resources-page-container {
   width: 100%;
   padding: 0 15px;
+  .resources-container {
+    @media screen and (max-width: 430px) {
+      width: 100%;
+    }
+    margin: 0 -15px;
+    .resource-container {
+      display: inline-flex;
+      align-items: center;
+      .resource-content-container {
+        p,
+        h4 {
+          margin: 1.1rem 0;
+        }
+        h4 {
+          line-height: 1.5rem;
+        }
+      }
+      overflow: hidden;
+      max-width: 400px;
+      width: 100%;
+      margin: 0 15px 15px 15px;
+      border-bottom: 1px solid #969696;
+    }
+  }
   .resources-page {
     max-width: 400px;
+    @media screen and (min-width: 430px) {
+      .resource-container {
+        padding: 15px 25px;
+        margin: 0 15px 30px 15px;
+        border: none;
+        box-shadow: 0px 2px 8px #C9C9C9;
+      }
+    }
     @media screen and (min-width: 860px) {
       max-width: 830px;
+      .chat-follow-container {
+        .resource-container {
+          min-height: 250px;
+        }
+      }
+      .resource-container {
+        min-height: 400px;
+      }
     }
     @media screen and (min-width: 1290px) {
       max-width: 1260px;
@@ -52,37 +92,6 @@
     .link-like,
     a {
       background: #FCA8FF;
-    }
-  }
-  .resources-container {
-    @media screen and (max-width: 430px) {
-      width: 100%;
-    }
-    margin: 0 -15px;
-    .resource-container {
-      display: inline-flex;
-      align-items: center;
-      .resource-content-container {
-        p,
-        h4 {
-          margin: 1.1rem 0;
-        }
-        h4 {
-          line-height: 1.5rem;
-        }
-      }
-      overflow: hidden;
-      padding: 15px 25px;
-      max-width: 400px;
-      width: 100%;
-      min-height: 400px;
-      margin: 0 15px 30px 15px;
-      box-shadow: 0px 2px 8px #C9C9C9;
-    }
-    &.chat-follow-container {
-      .resource-container {
-        min-height: 250px;
-      }
     }
   }
 }
