--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -27,7 +27,7 @@
   input, select {
     font-family: Fira Sans Condensed;
     letter-spacing: 0.03rem;
-    font-size: 90%;
+    font-size: 0.9rem;
     color: #5b555c;
     width: 100%;
     display: block;
