Updates for checkbox

--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -4,6 +4,12 @@
   .signup-form {
     padding: 0 15px 0 15px;
   }
+  .checkbox {
+    width: auto;
+    display: inline;
+    height: auto;
+    margin-right: 5px;
+  }
   h3 {
     font-size: 1.5rem;
     font-weight: 400;
