--- a/less/shared.less
+++ b/less/shared.less
@@ -42,6 +42,12 @@ a {
   color: #FF0000;
 }
 
+p.error-message {
+  font-family: Fira Sans Condensed;
+  margin-top: 0;
+  font-size: .75rem;
+}
+
 a.button {
   display: inline-flex;
   align-items: center;
