--- a/less/components/header.less
+++ b/less/components/header.less
@@ -5,8 +5,9 @@
     @media screen and (min-width: 400px) {
       height: ~"calc(100vh - 146px - 98px;)";
     }
-    background-image: url("/assets/images/header.png");
-    background-position: center center;
+    background-image: url("/assets/images/header.jpg");
+    background-size: cover;
+    background-position: 50%;
   }
   .header-content {
     margin: 0 20px;
