Design feedback for share buttons.

--- a/less/pages/share.less
+++ b/less/pages/share.less
@@ -16,18 +16,18 @@
   .share-buttons {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 180px;
     margin: 0 auto;
-    flex-wrap: wrap;
-    max-width: 115px;
+    margin: 0 auto;
     .share-button {
       color: #FFFFFF;
-      height: 30px;
-      width: 30px;
+      height: 50px;
+      width: 50px;
       display: flex;
       align-items: center;
       justify-content: center;
       text-decoration: none;
+      font-size: 30px;
       &.email-button {
         background: #7DD226;
       }
