--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -33,7 +33,7 @@
         background-color: transparent;
         height: 65px;
         font-size: 14px;
-        font-family: Arvo;
+        font-family: Arvo, sans-serif;
         font-weight: 600;
         cursor: pointer;
       }
