--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -19,19 +19,19 @@
     line-height: 1.4375rem;
   }
   label {
-    font-family: Fira Sans Condensed;
+    font-family: Fira Sans Condensed, sans-serif;
     color: #5b555c;
     font-size: 0.75rem;
   }
   .privacy-policy {
-    font-family: Fira Sans Condensed;
+    font-family: Fira Sans Condensed, sans-serif;
     font-size: 0.75rem;
     line-height: 1.2rem;
     color: #5b555c;
     margin: 20px 0;
   }
   input, select {
-    font-family: Fira Sans Condensed;
+    font-family: Fira Sans Condensed, sans-serif;
     letter-spacing: 0.03rem;
     font-size: 0.9rem;
     color: #5b555c;
