--- a/less/shared.less
+++ b/less/shared.less
@@ -1,5 +1,5 @@
 html {
-  font-family: Arvo;
+  font-family: Arvo, sans-serif;
   scroll-behavior: smooth;
   font-size: 16px;
   @media screen and (min-width: 768px) {
@@ -43,7 +43,7 @@ a {
 }
 
 p.error-message {
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, sans-serif;
   margin-top: 0;
   font-size: .75rem;
 }
@@ -70,7 +70,7 @@ a.button {
   text-decoration: none;
   color: inherit;
   border: none;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, sans-serif;
   font-weight: bold;
   font-family: inherit;
   text-align: center;
