Fixes for fonts in other languages.

--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -43,7 +43,7 @@
       border: none;
       box-shadow: none;
       background-color: transparent;
-      font-family: Arvo, sans-serif;
+      font-family: Fira Sans, sans-serif;
       cursor: pointer;
       margin-left: auto;
       margin-right: auto;
