--- a/less/shared.less
+++ b/less/shared.less
@@ -1,5 +1,5 @@
 html {
-  font-family: Arvo, sans-serif;
+  font-family: Fira Sans, sans-serif;
   scroll-behavior: smooth;
   font-size: 16px;
   @media screen and (min-width: 768px) {
