Missing font fallback in footer

--- a/less/components/footer.less
+++ b/less/components/footer.less
@@ -1,6 +1,6 @@
 footer {
   margin: 0 15px;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, sans-serif;
   .footer-contents {
     text-align: center;
     width: 1200px;
