--- a/less/components/form-body.less
+++ b/less/components/form-body.less
@@ -1,10 +1,12 @@
 .form-body-container {
   vertical-align: top;
-  margin: 54px 0 54px 0;
+  margin: 54px 0;
   .form-body {
     width: 100%;
-    max-width: 992px;
-    padding: 0 15px 0 15px;
+    max-width: 800px;
+    padding: 0 20px;
+    display: block;
+    margin: 0 auto;
     .horizontal-rule {
       margin-top: 50px;
       width: 68px;
@@ -13,22 +15,23 @@
     }
     .form-description {
       font-size: 1.25rem;
-      line-height: 1.75rem;
+      line-height: 1.85rem;
       margin-bottom: 50px;
+      letter-spacing: -0.01rem;
       &::first-letter {
         color: #17FFFF;
         font-weight: 600;
         float: left;
-        font-size: 5.5rem;
+        font-size: 6.5rem;
         margin-top: 0.5rem;
-        margin-right: 0.5rem;
+        margin-right: 0.9rem;
       }
       @media screen and (max-width: 400px) {
         font-size: 1rem;
         &::first-letter {
-          font-size: 3.5rem;
+          font-size: 4rem;
           margin-top: 0.3rem;
-          margin-right: 0.3rem;
+          margin-right: 0.75rem;
         }
       }
     }
@@ -43,9 +46,10 @@
       padding: 0 55px 0 55px;
     }
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1800px) {
     .form-body {
       padding: 0 84px 0 84px;
+      max-width: 1100px;
     }
   }
 }
