--- a/less/shared.less
+++ b/less/shared.less
@@ -3,10 +3,10 @@ html {
   scroll-behavior: smooth;
   font-size: 16px;
   @media screen and (min-width: 768px) {
-    font-size: 20px;
+    font-size: 22px;
   }
   @media screen and (min-width: 1920px) {
-    font-size: 24px;
+    font-size: 28px;
   }
 }
 
@@ -72,8 +72,10 @@ a.button {
   border: none;
   font-family: Fira Sans Condensed, sans-serif;
   font-weight: bold;
-  font-family: inherit;
   text-align: center;
+  @media screen and (min-width: 1800px) {
+    height: 70px;
+  }
 
   &.arrow {
     padding: 0.7rem 2.5rem 0.7rem 1rem;
