Margin tweak on lang drop down.

--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -40,6 +40,7 @@
       }
     }
     select {
+      min-width: 180px;
       border: none;
       box-shadow: none;
       background-color: transparent;
@@ -77,8 +78,8 @@
         display: none;
       }
       select {
-        margin-right: 0;
         text-align: left;
+        margin-right: 40px;
       }
       .nav-logo-container {
         border-right: 1px solid #CFCFCF;
