Tweak cap letter for Czech

--- a/less/components/form-body.less
+++ b/less/components/form-body.less
@@ -53,3 +53,15 @@
     }
   }
 }
+
+html[lang="cs"] .form-body-container .form-body .form-description {
+  &::first-letter {
+    float: none;
+    margin-right: 0;
+  }
+  @media screen and (max-width: 400px) {
+    &::first-letter {
+      margin-right: 0;
+    }
+  }
+}
