--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -90,8 +90,11 @@
     margin: 0;
     .signup-form {
       width: 100%;
-      margin: 64px 0 144px 0;
+      margin: 0 0 144px 0;
       padding: 0 55px 0 55px;
+      h3 {
+        margin-top: 64px;
+      }
     }
   }
   @media screen and (min-width: 1200px) {
