Smooth scroll on form.

--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -95,6 +95,7 @@
       h3 {
         margin-top: 64px;
       }
+      transition: margin-top 1s;
     }
   }
   @media screen and (min-width: 1200px) {
