Fix mobile bug.

--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -6,6 +6,9 @@
     max-width: 800px;
     display: block;
     margin: 0 auto;
+    @media screen and (max-width: 992px) {
+      position: static !important;
+    }
   }
   .checkbox {
     width: auto;
