--- a/less/components/index.less
+++ b/less/components/index.less
@@ -1,5 +1,6 @@
 @import "footer";
 @import "header";
-@import "form-body";
+@import "call-button";
+@import "call-tool";
 @import "signup-form";
 @import "nav";
