--- a/less/components/call-tool.less
+++ b/less/components/call-tool.less
@@ -21,6 +21,12 @@
     padding: 0;
     border: none;
   }
+  .phone-number-input-container {
+    width: 100%;
+    max-width: 381px;
+    display: inline-block;
+    white-space: nowrap;
+  }
   .select-container {
     position: relative;
     display: inline-block;
