--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -12,7 +12,7 @@
     }
     .nav-link,
     select {
-      margin: 8px 10px;
+      margin: 8px 28px;
       font-size: 0.8rem;
       display: block;
       text-align: center;
@@ -25,6 +25,7 @@
       cursor: pointer;
       top: 0;
       right: 0;
+      color: #FFFFFF;
       align-items: center;
       justify-content: center;
     }
@@ -66,7 +67,7 @@
       background-size: 100% auto;
     }
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 992px) {
     height: 65px;
     .nav {
       z-index: 3;
@@ -87,13 +88,6 @@
       .nav-logo-container {
         padding: 16px;
         margin-right: 12px;
-      }
-    }
-  }
-  @media screen and (min-width: 992px) {
-    .nav {
-      .nav-link {
-        margin: 8px 28px;
       }
     }
   }
