--- a/less/pages/impact.less
+++ b/less/pages/impact.less
@@ -1,6 +1,8 @@
 .impact {
   .impact-items-container {
-    display: flex;
+    @media screen and (min-width: 742px) {
+      display: flex;
+    }
     text-align: center;
     .impact-item-container {
       flex-basis: 0;
