Updating style and images.

--- a/less/components/footer.less
+++ b/less/components/footer.less
@@ -1,6 +1,6 @@
 footer {
   margin: 0 15px;
-  font-family: Fira Sans Condensed, sans-serif;
+  font-weight: 400;
   .footer-contents {
     text-align: center;
     width: 1200px;
@@ -10,6 +10,7 @@ footer {
       text-align: center;
       color: rgba(255, 255, 255, 0.8);
       font-size: 14px;
+      font-weight: 300;
       a {
         color: rgba(255, 255, 255, 1);
         text-decoration: none;
