--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -12,6 +12,7 @@
     }
     .nav-link,
     select {
+      font-family: Zilla Slab, sans-serif;
       margin: 8px 28px;
       font-size: 0.8rem;
       display: block;
@@ -30,22 +31,22 @@
       justify-content: center;
     }
     .nav-link {
+      letter-spacing: .02rem;
       text-decoration: none;
       color: #FFFFFF;
-      opacity: 0.9;
+      opacity: 0.85;
       &:hover,
       &.active {
-        font-weight: 600;
+        font-weight: 500;
         opacity: 1;
       }
     }
     select {
       min-width: 180px;
       border: none;
-      font-weight: 600;
+      font-weight: 400;
       box-shadow: none;
       background-color: transparent;
-      font-family: Fira Sans, sans-serif;
       cursor: pointer;
       margin-left: auto;
       margin-right: auto;
