--- a/less/components/header.less
+++ b/less/components/header.less
@@ -1,4 +1,6 @@
 header {
+  background-image: url("/assets/images/06_Background.png");
+  background-size: cover;
   text-align: center;
   h1, p {
     width: 100%;
@@ -8,13 +10,24 @@ header {
     max-width: 1050px;
     padding: 0 25px;
   }
+
+  h1 {
+    font-weight: 500;
+    font-size: 2.35rem;
+  }
   .italic {
     font-style: italic;
+    font-weight: 400;
+    font-size: .93rem;
   }
   .bold {
     font-weight: bold;
   }
   .blue-highlight {
+    font-family: Open Sans;
+    font-weight: 300;
+    color: black;
+    font-size: 1.2rem;
     background: #42FEFD;
     box-decoration-break: clone;
     padding: 0.15rem;
