--- a/less/components/signup-form.less
+++ b/less/components/signup-form.less
@@ -5,12 +5,20 @@
       display: inline-block;
       background: #000000;
       vertical-align: bottom;
+      letter-spacing: -.007rem;
     }
     .mobile-button {
       display: block;
     }
     .desktop-button {
       display: none;
+    }
+
+    label {
+      font-family: Open Sans, sans-serif;
+      font-weight: 300;
+      font-size: .7rem;
+      color: #454545;
     }
     @media screen and (min-width: 931px) {
       display: flex;
@@ -25,12 +33,16 @@
       }
     }
     .email-input {
+      font-family: Open Sans, sans-serif;
+      font-weight: 300;
+      font-size: .87rem;
+      color: #000000;
       border: none;
       height: 40px;
       display: inline-block;
       padding-left: 12px;
       vertical-align: bottom;
-      border: 1px solid #000000;
+      border: 2px solid #000000;
       &:invalid {
         box-shadow: none;
       }
