--- a/less/pages/home.less
+++ b/less/pages/home.less
@@ -11,7 +11,13 @@
       }
     }
   }
-  h1 {
-    text-align: center;
+
+  section {
+
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 500;
+    }
   }
 }
