--- a/less/shared.less
+++ b/less/shared.less
@@ -1,5 +1,6 @@
 html {
-  font-family: Fira Sans, sans-serif;
+  font-family: Zilla Slab, sans-serif;
+  font-weight: 300;
   scroll-behavior: smooth;
   font-size: 16px;
   @media screen and (min-width: 768px) {
@@ -17,8 +18,20 @@ html {
 }
 
 p {
-  color: #4A4A4A;
-  line-height: 1.625rem;
+  color: #000000;
+  font-size: 1.12rem;
+  line-height: 1.5rem;
+}
+
+h2 {
+  font-family: Open Sans, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+h3 {
+  font-weight: 300;
+  font-size: 2rem;
 }
 
 h4 {
@@ -58,19 +71,19 @@ a.button {
 button {
   height: 40px;
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 0 60px;
   cursor: pointer;
   background: #000000;
   font-weight: 400;
-  font-size: 0.875rem;
-  letter-spacing: 0.01875rem;
+  font-size: 0.95rem;
+  letter-spacing: 0.06rem;
   display: block;
   position: relative;
   text-decoration: none;
   color: #FFFFFF;
   border: none;
-  font-family: Fira Sans Condensed, sans-serif;
-  font-weight: bold;
+  font-family: Oswald, sans-serif;
+  font-weight: 500;
   text-align: center;
   @media screen and (min-width: 1800px) {
     height: 70px;
