--- a/less/components/header.less
+++ b/less/components/header.less
@@ -1,7 +1,10 @@
 header {
   background-image: url("/assets/images/06_Background.png");
-  background-size: cover;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
   text-align: center;
+  padding: 1.5rem 0;
   h1, p {
     width: 100%;
     margin-left: auto;
