Initial call button work

--- a/less/shared.less
+++ b/less/shared.less
@@ -68,7 +68,7 @@ a.button {
   justify-content: center;
 }
 
-button {
+button, .button-styling {
   height: 40px;
   margin: 0 auto;
   padding: 0 60px;
