number validation styling

--- a/less/shared.less
+++ b/less/shared.less
@@ -23,6 +23,10 @@ p {
   line-height: 1.5rem;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 h2 {
   font-family: Open Sans, sans-serif;
   font-size: 1.2rem;
