--- a/less/components/call-tool.less
+++ b/less/components/call-tool.less
@@ -26,6 +26,17 @@
     max-width: 381px;
     display: inline-block;
     white-space: nowrap;
+
+    &:not(.valid) {
+      .select-container {
+        border: 1px solid red;
+        border-width: 1px 0 1px 1px;
+      }
+      .input-container {
+        border: 1px solid red;
+        border-width: 1px 1px 1px 0;
+      }
+    }
   }
   .select-container {
     position: relative;
@@ -34,6 +45,11 @@
     border: 1px solid #000000;
     border-right: none;
     overflow: hidden;
+
+    select {
+      outline: none;
+      user-select: none;
+    }
   }
   .input-container {
     position: relative;
@@ -42,6 +58,11 @@
     border: 1px solid #000000;
     border-left: none;
     overflow: hidden;
+
+    input {
+      outline: none;
+      user-select: none;
+    }
   }
   .placeholder-container {
     position: absolute;
