network error notification

--- a/less/shared.less
+++ b/less/shared.less
@@ -31,6 +31,10 @@ h2 {
   font-family: Open Sans, sans-serif;
   font-size: 1.2rem;
   font-weight: 300;
+
+  & + h2 {
+    margin-top: -0.5em;
+  }
 }
 
 h3 {
