--- a/less/components/header.less
+++ b/less/components/header.less
@@ -2,9 +2,9 @@ header {
   background-image: url("/assets/images/06_Background.png");
   background-size: auto 100%;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 50% -50px;
   text-align: center;
-  padding: 1.5rem 0;
+  padding: 3.5rem 0 1.5rem 0;
   h1, p {
     width: 100%;
     margin-left: auto;
@@ -14,14 +14,20 @@ header {
     padding: 0 25px;
   }
 
+  .header-paragraph {
+    max-width: 950px;
+  }
+
   h1 {
     font-weight: 500;
     font-size: 2.35rem;
+    margin-bottom: 16px;
   }
   .italic {
     font-style: italic;
     font-weight: 400;
     font-size: .93rem;
+    margin-top: 28px;
   }
   .bold {
     font-weight: bold;
