--- a/less/shared.less
+++ b/less/shared.less
@@ -43,6 +43,54 @@ a {
   color: inherit;
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 300;
+  font-style: normal;
+  src: url('/assets/fonts/opensans-light.woff2') format('woff2'),
+       url('/media/fonts/opensans-light.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 400;
+  font-style: normal;
+  src: url('/assets/fonts/opensans-regular.woff2') format('woff2'),
+       url('/media/fonts/opensans-regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Zilla Slab';
+  font-weight: 300;
+  font-style: normal;
+  src: url('/assets/fonts/ZillaSlab-Light.woff2') format('woff2'),
+       url('/media/fonts/ZillaSlab-Light.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Zilla Slab';
+  font-weight: 400;
+  font-style: normal;
+  src: url('/assets/fonts/ZillaSlab-Regular.woff2') format('woff2'),
+       url('/media/fonts/ZillaSlab-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Zilla Slab';
+  font-weight: 400;
+  font-style: italic;
+  src: url('/assets/fonts/ZillaSlab-RegularItalic.woff2') format('woff2'),
+       url('/media/fonts/ZillaSlab-RegularItalic.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Zilla Slab';
+  font-weight: 500;
+  font-style: normal;
+  src: url('/assets/fonts/ZillaSlab-Medium.woff2') format('woff2'),
+       url('/media/fonts/ZillaSlab-Medium.woff') format('woff');
+}
+
 .nav-offset {
   height: 65px;
   margin-top: -65px;
